--- a/client/default.css
+++ b/client/default.css
@@ -6,7 +6,12 @@
 	position:relative;
 	float:left;
 
-	margin-left:4px
+	margin-left:2px
+}
+
+body
+{
+	background-color:#DCDCDC;
 }
 
 .header
@@ -16,22 +21,36 @@
 
 .interface
 {
-	width:470px;
-	height:400px;
+	width:490px;
+	height:190px;
+
+	padding-top:10px;
+	padding-bottom:10px;
+	
+	padding-left:10px;
+	padding-right:7px;
+
+	border-radius:15px;
+
+
+	margin-top:2px;
+	margin-bottom:2px;
+
 	margin-left:auto;
 	margin-right:auto;
+
+	background-color:#99aacc;
 }
 
 .tags_div
 {
-	width:468px;
 	height:32px;
 	margin-bottom:5px;
 }
 
 .tags
 {
-	width:462px;
+	width:480px;
 	height:26px;
 	
 	font-size:18px;
@@ -58,6 +77,7 @@
 
 .audio_player
 {
+	margin-left:1px;
 	margin-bottom:2px;
 
 	height:32px;
@@ -68,10 +88,32 @@
 {
 }
 
-.rate_button
+.yup_undepressed
 {
 	width:166px;
 	height:32px;
+}
+
+.nope_undepressed
+{
+	width:166px;
+	height:32px;
+}
+
+.yup_depressed
+{
+	width:166px;
+	height:32px;
+
+	background-color:#99DD99
+}
+
+.nope_depressed
+{
+	width:166px;
+	height:32px;
+
+	background-color:#DD9999
 }
 
 .audio_div
@@ -84,14 +126,14 @@
 {
 	position:relative;
 	float:left;
-	width:132px;
-	height:132px;
+	width:150px;
+	height:150px;
 
 	margin-right:2px;
 }
 
 .art_img
 {
-	width:132px;
-	height:132px;
+	width:150px;
+	height:150px;
 }
