--- a/client/default.css
+++ b/client/default.css
@@ -48,7 +48,7 @@ body
 
 .tags
 {
-	width:480px;
+	width:482px;
 	height:26px;
 	
 	font-size:18px;
@@ -63,6 +63,7 @@ body
 .track_links
 {
 	margin-bottom:2px;
+	margin-left:1px;
 	width:336px;
 	height:64px;
 }
@@ -84,17 +85,18 @@ body
 
 .rate_div
 {
+	margin-left:1px;
 }
 
 .yup
 {
-	width:166px;
+	width:165px;
 	height:32px;
 }
 
 .nope
 {
-	width:166px;
+	width:165px;
 	height:32px;
 }
 
@@ -140,7 +142,9 @@ body
 	height:64px;
 	margin:5px;
 	padding:5px;
-	
+
+	border-style:solid;
+	border-width:1px;
 }
 
 .prev_track_links
